fix: positioning of recipe covers palette parts in mix UI

--- a/src/Mixer.scss
+++ b/src/Mixer.scss
@@ -297,10 +297,11 @@
     }
     .recipe-info {
         position: absolute;
-        width: 10rem;
+        width: 9rem;
         font-size: 0.75rem;
         background-color: #FFFFFF33;
-        padding: 1rem 0 0 0.5rem;
+        padding: 0.5rem 0 0.5rem 0.5rem;
+        top: 1rem;
 
         h3 {
             font-size: 0.9rem;
